Fix spacing issue on contact pg

--- a/default.css
+++ b/default.css
@@ -44,7 +44,7 @@ p {
     clear: both;
 }
 
-br p {
+br h3{
     float: left;
     clear: both;
 }
